fixing scrollbars/footer
removing unnecessary scrollbars and fixing the footer

--- a/src/main/webapp/styles/account.css
+++ b/src/main/webapp/styles/account.css
@@ -4,12 +4,14 @@
 
 html {
 	height: 100vh; 
+	width: 98vw; 
 }
 
 body {
 	display: flex;
 	min-height: 95vh;
 	flex-direction: column; 
+	width: 98vw; 
 }
 
 h2 {
