--- a/src/main/webapp/styles/footer.css
+++ b/src/main/webapp/styles/footer.css
@@ -1,8 +1,8 @@
 .footer {
  position: relative; 
- bottom:0;
  width: 100%; 
  padding-left: 1vw; 
  border-top: 1px solid gray; 
  height: 3vh;  
+ padding-bottom: 2vh; 
 }
